feat: update project to use Bun for script commands and add new authentication screens
- Changed script commands in package.json to use Bun instead of Expo CLI.
- Modified OnBoarding component to navigate to the new auth landing page.
- Wrapped Stack in SafeAreaView for better layout handling.
- Added AuthLanding component for user authentication with image background and buttons for Google and email sign-up.
- Created SignIn component for user login with form validation and loading state.
- Developed SignUp component with form validation for new user registration.
- Updated index.tsx to navigate to the new auth landing page based on onboarding and login status.
- Adjusted auth utility to always return false for onboarding status to keep onboarding visible.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,9 @@
     "**/.symlinks": true,
     "**/.plugin_symlinks": true,
     "**/.vscode": true,
-    ".vscode": true
+    ".vscode": true,
+    "**/.expo": true,
+    ".expo": true
   },
   "explorerExclude.backup": {}
 }
